[project]
name = "meeting-intelligence-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "ffmpeg-python>=0.2.0",
    "langchain>=1.2.7",
    "langgraph>=1.0.7",
    "numpy>=2.4.2",
    "pydantic>=2.12.5",
    "sentence-transformers>=5.2.2",
    "uvicorn>=0.40.0",
]
