[project]
name = "meeting-intelligence-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "ffmpeg-python>=0.2.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langgraph>=1.0.7",
    "numpy>=2.4.2",
    "pydantic>=2.12.5",
    "sentence-transformers>=5.2.2",
    "tqdm>=4.67.2",
    "transformers>=5.0.0",
    "uvicorn>=0.40.0",
]
